# GPS-Denied-Drone-Navigation-for-3D-Mapping-and-Mineral-Detection

./: .gitignore  LICENSE  README.md
maps/: waypoints.json
models/mineral_chalcopyrite/: model.config  model.sdf
models/mineral_hematite/: model.config  model.sdf
models/mineral_limestone/: model.config  model.sdf
models/mineral_malachite/: model.config  model.sdf
models/mineral_quartz/: model.config  model.sdf
models/x3_lidar/: model.sdf
src/drone_controller/: package.xml  setup.py
src/drone_controller/drone_controller/: drone_teleop.py  hover_controller.py
src/drone_nav/: package.xml  setup.cfg  setup.py
src/drone_nav/drone_nav/: cave_navigator.py  frontier_explorer.py  mineral_explorer.py  spectroscopy.py  waypoint_recorder.py
worlds/: cave_world.world
