<?xml version="1.0"?>
<package format="3">
  <name>drone_controller</name>
  <version>0.0.1</version>
  <description>X3 LiDAR drone hover controller</description>
  <maintainer email="sai@neu.edu">Sai</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
