<?xml version="1.0"?>
<package format="3">
  <name>drone_nav</name>
  <version>0.0.1</version>
  <description>Autonomous drone frontier exploration</description>
  <maintainer email="sai@neu.edu">Sai</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>gazebo_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
